--- a/map.html
+++ b/map.html
@@ -151,10 +151,10 @@
     <!-- Desktop Header -->
     <header class="hidden lg:flex h-16 bg-white dark:bg-slate-900 border-b border-slate-200 dark:border-slate-800 items-center justify-between px-6 z-20 shadow-sm flex-shrink-0">
         <div class="flex items-center gap-3">
-            <div class="bg-primary-600 text-white p-2 rounded-xl">
-                <span class="material-symbols-rounded icon-svg">explore</span>
+            <div>
+                <img src="https://i.postimg.cc/d3Jnyv2F/11zon-cropped.png" alt="Logo" class="w-10 h-10 rounded-full">
             </div>
-            <h1 class="font-bold text-lg">Map Navigator <span class="text-primary-600 font-normal text-sm ml-2">Pro V3.2</span></h1>
+            <h1 class="font-bold text-lg">แผนที่นำทาง <span class="text-primary-600 font-normal text-sm ml-2">Pro V3.2</span></h1>
             <span class="text-xs text-slate-400 dark:text-slate-500 ml-2">(Smart Calculation 🇹🇭)</span>
         </div>
         <button onclick="toggleTheme()" class="p-2 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800 text-slate-500 dark:text-slate-400 transition-colors">
